# CBuild

./: .clang-tidy  .gitignore  CMakeLists.txt  Log_Book.md  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
DOCs/: ARCHITECTURE.md  BUILD.md  CBuild_OS_Dev_Report.docx  CBuild_tasks.docx  Task.md  claude_report.md  gemini_report.md
scripts/: new_project.sh
src/: main.cpp  version.hpp.in
src/math/: color.hpp  geom.hpp  mat3.hpp  rect.hpp  vec2.hpp
src/platform/: events.hpp  keycodes.hpp  window.hpp  window_win32.cpp
src/render/: font_renderer.cpp  font_renderer.hpp  renderer.cpp  renderer.hpp
src/widgets/: button_widget.hpp  label_widget.hpp  panel_widget.hpp  text_input_widget.hpp  widget.cpp  widget.hpp  widget_factory.hpp
test/: asan_test.cpp  math_test.cpp  render_benchmark.cpp  render_test.cpp  widget_test.cpp
